--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,7 @@ current_version = 1.1.0
 parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
-	((?P<prekind>a|b|rc)
+	((?P<prekind>a|b|rc|epam)
 	(?P<pre>\d+)  # pre-release version num
 	)?
 serialize =
@@ -19,6 +19,7 @@ values =
 	a
 	b
 	rc
+	epam
 	final
 
 [bumpversion:part:pre]
