--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,12 +1,12 @@
 [bumpversion]
-current_version = 1.2.1rc1
+current_version = 1.2.2epam5
 parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
 	((?P<prekind>a|b|rc|epam)
 	(?P<pre>\d+)  # pre-release version num
 	)?
-serialize =
+serialize = 
 	{major}.{minor}.{patch}{prekind}{pre}
 	{major}.{minor}.{patch}
 commit = False
@@ -15,7 +15,7 @@ tag = False
 [bumpversion:part:prekind]
 first_value = a
 optional_value = final
-values =
+values = 
 	a
 	b
 	rc
