--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,12 +3,13 @@ current_version = 1.2.2.9
 parse = (?P<major>\d+)
 	\.(?P<minor>\d+)
 	\.(?P<patch>\d+)
+	\.(?P<epam>\d+)
 	((?P<prekind>a|b|rc|epam)
 	(?P<pre>\d+)  # pre-release version num
 	)?
 serialize = 
-	{major}.{minor}.{patch}{prekind}{pre}
-	{major}.{minor}.{patch}
+	{major}.{minor}.{patch}.{epam}{prekind}{pre}
+	{major}.{minor}.{patch}.{epam}
 commit = False
 tag = False
 
